tests/expectations/parser-expression/expression/async_block_fail.out
Error [EPAR0370003]: unexpected EOF
    --> test_0:1:8
     |
   1 | final {
     |        ^
Error [EPAR0370003]: unexpected EOF
    --> test_1:1:6
     |
   1 | final
     |      ^
Error [EPAR0370005]: expected ';' -- found '}'
    --> test_2:1:11
     |
   1 | final { 0 }
     |           ^
Error [EPAR0370005]: expected ';' -- found 'y'
    --> test_3:1:11
     |
   1 | final { x y }
     |           ^
